--- a/first_try/new_style.css
+++ b/first_try/new_style.css
@@ -1,13 +1,27 @@
 body{
     background-color: aquamarine;
 }
-table{
-    /* width:500; */
-}
+
 .f1{
     padding: 15px;
     margin: 20px;
-    background-color:burlywood;
-    border-radius: 10px;   
     
+    border-radius: 10px;   
+    background-image: linear-gradient(
+        130deg,rgba(51, 4, 207, 0.5),
+        rgba(237, 8, 176, 0.5)
+    );
+
+}
+p{
+    padding:10px;
+    min-width: 100px;
+    min-height: 100px; 
+    /* width: 100px;
+    height: 100px; */
+    background-color:deeppink;
+    border-radius: 20px;
+    /* border-style:groove; */
+    border: 10px;
+    border-color: black;
 }
